<resources>
    <string name="app_name">SeniorProject</string>
    <string name="odsay_key">API KEY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">지도</string>
    <string name="menu_weather">날씨</string>
    <string name="menu_shuttle">달구지</string>
    <string name="menu_timetable">시간표</string>


</resources>
