<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.seniorproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.seniorproject.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.seniorproject.ui.weather.weatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />
    <!--Refactor complete !-->
    <fragment
        android:id="@+id/nav_shuttle"
        android:name="com.example.seniorproject.ui.shuttle.ShuttleFragment"
        android:label="@string/menu_shuttle"
        tools:layout="@layout/fragment_shuttle" />
    <!--Refactor complete !-->
    <fragment
        android:id="@+id/nav_timetable"
        android:name="com.example.seniorproject.ui.timetable.TimeTableFragment"
        android:label="@string/menu_timetable"
        tools:layout="@layout/fragment_timetable" />


</navigation>